--- a/fmh_android_15_03_24/app/build.gradle
+++ b/fmh_android_15_03_24/app/build.gradle
@@ -57,11 +57,11 @@ android {
 
 dependencies {
     implementation 'com.google.firebase:protolite-well-known-types:18.0.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0-alpha07'
-
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test:rules:1.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.7.0-alpha01'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0-alpha01'
+    androidTestImplementation 'androidx.test.ext:junit:1.3.0-alpha01'
+    androidTestImplementation 'androidx.test:rules:1.7.0-alpha01'
     androidTestImplementation 'androidx.test:runner:1.4.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'io.qameta.allure:allure-kotlin-android:2.0.0'
