--- a/fmh_android_15_03_24/app/build.gradle
+++ b/fmh_android_15_03_24/app/build.gradle
@@ -1,46 +1,40 @@
 plugins {
     id 'com.android.application'
-    id 'com.google.gms.google-services'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-parcelize'
     id 'androidx.navigation.safeargs.kotlin'
-    id 'com.google.firebase.crashlytics'
 }
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion "30.0.3"
+    namespace "ru.iteco.fmhandroid"
 
-
-    testOptions {
-        animationsDisabled = true
-    }
-
+    compileSdkVersion 34
+    buildToolsVersion "35.0.0"
 
     defaultConfig {
         applicationId "ru.iteco.fmhandroid"
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 34
         versionCode 14
         versionName "1.0.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
-
-
     }
 
     compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
         coreLibraryDesugaringEnabled true
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
     }
+
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
 
     buildFeatures {
         viewBinding true
+        buildConfig true
     }
 
     buildTypes {
@@ -53,9 +47,36 @@ android {
             buildConfigField "String", "BASE_URL", '"https://students.netoservices.ru/qamid-diplom-backend/"'
         }
     }
+
+    kapt {
+        correctErrorTypes = true
+    }
+
+    testOptions {
+        animationsDisabled = true
+    }
 }
 
 dependencies {
+    def retrofit_version = "2.9.0"
+    def okhttp_logging_version = "4.9.2"
+    def fragment_version = "1.5.7"
+    def lifecycle_version = "2.6.2"
+    def room_version = "2.5.2"
+    def nav_version = "2.6.0"
+    def recycler_version = "1.3.2"
+    def material_version = "1.9.0"
+    def constraint_version = "2.1.4"
+    def coroutines_version = "1.7.3"
+    def hilt_version = "2.48"
+    def gson_version = "2.10.1"
+    def swipe_refresh_version = "1.1.0"
+
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipe_refresh_version"
+    implementation "com.google.android.material:material:$material_version"
+    implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
     implementation 'com.google.firebase:protolite-well-known-types:18.0.0'
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.7.0-alpha01'
     androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0'
@@ -64,90 +85,54 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.7.0-alpha01'
     androidTestImplementation 'androidx.test:runner:1.4.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'io.qameta.allure:allure-kotlin-android:2.0.0'
 
-    def retrofit_version = "2.9.0"
-    def retrofit_gson_version = "2.9.0"
-    def okhttp_logging_version = "4.9.2"
-    def fragment_version = "1.4.1"
-    def lifecycle_version = "2.4.1"
-    def room_version = '2.4.2'
-    def nav_version = '2.3.5'
-    def recycler_version = '1.2.1'
-    def material_version = '1.5.0'
-    def constraint_version = '2.1.3'
-    def coroutines_version = '1.5.2'
-    def hilt_version = '2.41'
-    def gson_version = '2.9.0'
-    def swipe_refresh_version = '1.1.0'
-
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipe_refresh_version"
-    implementation "com.google.android.material:material:$material_version"
-    implementation "androidx.constraintlayout:constraintlayout:$constraint_version"
+    // Room
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+
+    // Retrofit + Gson
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_gson_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.google.code.gson:gson:$gson_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_logging_version"
+
+    // Kotlin Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_version"
+
+    // Fragment
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
+
+    // Lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
-    //noinspection LifecycleAnnotationProcessorWithJava8
     kapt "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
+    // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // RecyclerView
     implementation "androidx.recyclerview:recyclerview:$recycler_version"
-    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:1.1.5")
+
+    // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
-    implementation platform('com.google.firebase:firebase-bom:29.0.3')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-crashlytics-ktx'
 
-    // Testing-only dependencies
-    def test_core_version = "1.4.0"
-    def test_junit_version = "1.1.3"
-    androidTestImplementation "androidx.test:core-ktx:$test_core_version"
-    androidTestImplementation "androidx.test.ext:junit-ktx:$test_junit_version"
-    androidTestImplementation "androidx.test:runner:$test_core_version"
-//
-//
-//    // UiAutomator Testing
-//    def uiautomator_version = "2.2.0"
-//    def hamcrest_version = "1.3"
-//    androidTestImplementation "androidx.test.uiautomator:uiautomator:$uiautomator_version"
-//    androidTestImplementation "org.hamcrest:hamcrest-integration:$hamcrest_version"
-//
-//    //Espresso Testing
-//    def junit_version = "4.13.2"
-//    def test_ext_junit_version = "1.1.4-alpha07"
-//    def test_rules_version = "1.4.1-alpha07"
-//    def test_runner_version = "1.4.0"
-//    def test_espresso_espresso_core_version = "3.5.0-alpha07"
-//    def test_espresso_espresso_idling_resource = "3.4.0"
-//    def test_espresso_espresso_intents = "3.4.0"
-//
-//    testImplementation "junit:junit:$junit_version"
-//    androidTestImplementation "androidx.test.ext:junit:$test_ext_junit_version"
-//    androidTestImplementation "androidx.test:rules:$test_rules_version"
-//    androidTestImplementation "androidx.test:runner:$test_runner_version"
-//    androidTestImplementation "androidx.test.espresso:espresso-core:$test_espresso_espresso_core_version"
-//    implementation "androidx.test.espresso:espresso-idling-resource:$test_espresso_espresso_idling_resource"
-//    androidTestImplementation "androidx.test.espresso:espresso-intents:$test_espresso_espresso_intents"
-//
+    // Desugaring for Java 8+ APIs
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.0.4"
+
+    // Testing
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
     //Allure
     def allure_version = "2.4.0"
     androidTestImplementation "io.qameta.allure:allure-kotlin-android:$allure_version"
     androidTestImplementation "io.qameta.allure:allure-kotlin-model:$allure_version"
     androidTestImplementation "io.qameta.allure:allure-kotlin-commons:$allure_version"
     androidTestImplementation "io.qameta.allure:allure-kotlin-junit4:$allure_version"
-
-
 }
