--- a/fmh_android_15_03_24/gradle.properties
+++ b/fmh_android_15_03_24/gradle.properties
@@ -7,6 +7,8 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.java.home=D\:\\Irina\\JBR17
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.3-bin.zip
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -19,3 +21,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+buildConfig = true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
+
